--- a/public/pf/works-site3.html
+++ b/public/pf/works-site3.html
@@ -28,9 +28,9 @@
         </h1>
         <nav class="header-nav">
           <ul class="header-nav-list">
-            <li class="header-nav-item"><a href="#works">Works</a></li>
-            <li class="header-nav-item"><a href="#skill">Skill</a></li>
-            <li class="header-nav-item"><a href="#contact">Contact</a></li>
+            <li class="header-nav-item"><a href="index.html#works">Works</a></li>
+            <li class="header-nav-item"><a href="index.html#skill">Skill</a></li>
+            <li class="header-nav-item"><a href="index.html#contact">Contact</a></li>
           </ul>
         </nav>
       </div>
