update: 姫野　文章とテキストエリアのCSS修正

--- a/public/pf/index.html
+++ b/public/pf/index.html
@@ -234,11 +234,11 @@
         <h2 class="title">Contact</h2>
         <div class="inner">
           <form class="form-con">
-			  <p>お名前</p>
+			  <p>お名前：</p>
 			  <p class="input-botom"><input class="input" type="text" required></p>
-			  <p>メールアドレス</p>
+			  <p>メールアドレス：</p>
 			  <p class="input-botom"><input class="input" type="email" required></p>
-			  <p>お問い合わせ内容</p>
+			  <p>お問い合わせ内容：</p>
 			  <p class="input-botom" ><textarea cols="5" class="input" required></textarea></p>
 			  <p class="sub"><input type="submit" value="送信"></p>
           </form>
