--- a/public/pf/works-bnr.html
+++ b/public/pf/works-bnr.html
@@ -6,6 +6,7 @@
   <meta name="robots" content="noindex,nofollow">
   <meta name="description" content="姫野大暉のポートフォリオサイトのバナーのページです">
   <title>姫野大暉 ポートフォリオ/バナーページ</title>
+  <link rel="icon" href="img/favicon.ico">
   /*-- fonts --*/
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
