--- a/public/pf/works-site3.html
+++ b/public/pf/works-site3.html
@@ -7,6 +7,7 @@
   <meta name="robots" content="noindex,nofollow">
   <meta name="description" content="姫野大暉のポートフォリオサイトのサイト3作目のページです">
   <title>姫野大暉 ポートフォリオ//サイト3作目</title>
+  <link rel="icon" href="img/favicon.ico">
   /*-- fonts --*/
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
