update: 姫野　divをulに修正

--- a/public/pf/works-console.html
+++ b/public/pf/works-console.html
@@ -50,7 +50,7 @@
              社員情報の検索や登録、更新、削除をおこなうコンソールアプリケーションを作成しました。使用ツールはeclipseです。
             </p>
             <h3 class="article-info-title">詳細</h3>
-            <p>メニューに対応した番号をコンソールに入力することで、社員情報の全件表示、社員名検索、部署ＩＤ検索、登録、更新、削除が行えるように実装しました。メニュー番号入力後に、社員名検索では特定の単語を、部署ID検索では特定の部署IDを、登録では社員名・性別・生年月日・部署IDを、更新では社員ID・社員名・性別・生年月日・部署IDを、削除では社員IDの入力が必要になっています。</p>
+            <p>メニューに対応した番号をコンソールに入力することで、社員情報の全件表示、社員名検索、部署ＩＤ検索、登録、更新、削除が行えるように実装しました。<br>メニュー番号入力後に、社員名検索では特定の単語を、部署ID検索では特定の部署IDを、登録では社員名・性別・生年月日・部署IDを、更新では社員ID・社員名・性別・生年月日・部署IDを、削除では社員IDの入力が必要になっています。</p>
             <h3 class="article-info-title">担当</h3>
             <p>コーディング・SQL(30分)/コーディング・Java(15時間)/テスト(3時間)</p>
             <h3 class="article-info-title">演習の目的</h3>
