--- a/public/pf/index.html
+++ b/public/pf/index.html
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-  <div class="wrapper">
+  <li class="wrapper">
 
     <!-- header -->
     <header class="header">
@@ -42,176 +42,172 @@
       <!-- works -->
       <section class="works section" id="works">
         <h2 class="title">Works</h2>
-        <div class="inner">
-          <div class="works-list">
-			<a class="works-item" href="works-console.html">
+        <ul class="inner works-list">
+			<li class="works-item"><a href="works-console.html">
               <p class="works-img"><img src="img/java_app.png" alt="コンソール社員管理システムの表紙画像です。" /></p>
               <p class="works-name">コンソール社員管理システム/チーム開発演習</p>
               <p class="works-info">コーディング(Java/SQL)</p>
-            </a>
-            <a class="works-item" href="works-site3.html">
+            </a></li>
+            <li class="works-item"><a href="works-site3.html">
               <p class="works-img"><img src="img/site3-mainv.png" alt="はぐぐみという架空のWEBサイトの表紙画像です。" /></p>
               <p class="works-name">はぐぐみ/自主制作サイト</p>
               <p class="works-info">企画/情報設計/コンセプト/デザイン/コーディング/レスポンシブ/アイコン</p>
-            </a>
-            <a class="works-item" href="works-site1.html">
+            </a></li>
+            <li class="works-item"><a href="works-site1.html">
               <p class="works-img"><img src="img/thumbnail-ok.png" alt="キレイ歯科という架空のWEBサイトの表紙画像です。" /></p>
               <p class="works-name">キレイ歯科/自主制作サイト</p>
               <p class="works-info">企画/情報設計/コンセプト/デザイン/コーディング</p>
-            </a>
-            <a class="works-item" href="works-site2.html">
+            </a></li>
+            <li class="works-item"><a href="works-site2.html">
               <p class="works-img"><img src="img/site2-mainv.png" alt="MAISON EPUREという架空のWEBサイトの表紙画像です。" /></p>
               <p class="works-name">MAISON EPURE/自主制作サイト</p>
               <p class="works-info">企画/情報設計/コンセプト/デザイン/コーディング/レスポンシブ/バナー</p>
-            </a>
-            <a class="works-item" href="works-bnr.html">
+            </a></li>
+            <li class="works-item"><a href="works-bnr.html">
               <p class="works-img"><img src="img/bnr-ok.jpg" alt="フルハビという架空のバナーの表紙です。" /></p>
               <p class="works-name">フルーツのサブスク・フルハビ/バナー</p>
               <p class="works-info">企画/情報設計/コンセプト/デザイン</p>
             </a>
-            <a class="works-item" href="works-logo.html">
+            <li class="works-item"><a href="works-logo.html">
               <p class="works-img"><img src="img/bnr-mainv.jpg" alt="株式会社姫野建設という架空の会社のロゴの表紙です。" /></p>
               <p class="works-name">株式会社姫野建設/ロゴ</p>
               <p class="works-info">企画/情報設計/コンセプト/デザイン</p>
-            </a>
-            <a class="works-item" target="_blank" href="https://www.notion.so/_-249534feb469800fa907dc70a7605f0a">
+            </a></li>
+            <li class="works-item"><a target="_blank" href="https://www.notion.so/_-249534feb469800fa907dc70a7605f0a">
               <p class="works-img"><img src="img/notion.png" alt="研修で使用したNotion(ガントチャート)のイメージ画像です。" /></p>
               <p class="works-name">研修で使用したNotion(ガントチャート)</p>
               <p class="works-info">(別タブでURLに飛びます)</p>
-            </a>
-          </div>
-        </div>
+            </a></li>
+        </ul>
       </section>
       <!-- /works -->
 
       <!-- skill -->
       <section class="skill section" id="skill">
         <h2 class="title">Skill</h2>
-        <div class="inner">
-          <div class="skill-list">
-			<div class="skill-item">
+        <ul class="inner skill-list">
+			<li class="skill-item">
               <div class="skill-body">
                 <h3 class="skill-name">Java</h3>
                 <p class="skill-text">
                   Javaの基礎構文（変数、入出力、演算子、配列、条件分岐、繰り返し）を理解し、応用構文（パッケージ、例外処理、コレクションフレーム）を活用して、基礎的なコードを記述できます。</p>
               </div>
-            </div>
-            <div class="skill-item">
+            </li>
+            <li class="skill-item">
               <div class="skill-body">
                 <h3 class="skill-name">Oracle</h3>
                 <p class="skill-text">
                   ユーザー管理やCRUD操作などのデータベース基礎に加え、SQL構文やトランザクション制御を活用した柔軟なデータ操作が可能です。JDBC連携や設計にも対応できます</p>
               </div>
-            </div>
-            <div class="skill-item">
+            </li>
+            <li class="skill-item">
               <div class="skill-body">
                 <h3 class="skill-name">HTML</h3>
                 <p class="skill-text">
                   タグを理解し、デザインに合わせたマークアップをSEOの観点から正しくタグ付けできます。</p>
               </div>
-            </div>
-            <div class="skill-item">
+            </li>
+            <li class="skill-item">
               <div class="skill-body">
                 <h3 class="skill-name">CSS</h3>
                 <p class="skill-text">
                   レスポンシブ対応ができます。アニメーションなど複雑な動きは調べることで実装可能です。</p>
               </div>
-            </div>
-            <div class="skill-item">
+            </li>
+            <li class="skill-item">
               <div class="skill-body">
                 <h3 class="skill-name">SCSS</h3>
                 <p class="skill-text">
                   変数やネスト構造、mixin機能を使用した記述ができます。3作目以降からSCSSを使用しています。</p>
               </div>
-            </div>
-            <div class="skill-item">
+            </li>
+            <li class="skill-item">
               <div class="skill-body">
                 <h3 class="skill-name">WordPress</h3>
                 <p class="skill-text">
                   固定ページや簡単なテーマの編集、記事の投稿など簡単な作業ができます。</p>
               </div>
-            </div>
-            <div class="skill-item">
+            </li>
+            <li class="skill-item">
               <div class="skill-body">
                 <h3 class="skill-name">JQuery</h3>
                 <p class="skill-text">
                   JQueryを使用した簡単なコードを書くことができ、変数、四則演算、条件文、繰り返し文などの基本構文がわかります。また、vegas、slickは制作に使用しています。</p>
               </div>
-            </div>
-            <div class="skill-item">
+            </li>
+            <li class="skill-item">
               <div class="skill-body">
                 <h3 class="skill-name">JavaScript</h3>
                 <p class="skill-text">
                   JQueryで簡単に使用したため、スキルアップのため勉強中です。</p>
               </div>
-            </div>
-            <div class="skill-item">
+            </li>
+            <li class="skill-item">
               <div class="skill-body">
                 <h3 class="skill-name">PhotoShop</h3>
                 <p class="skill-text">
                   解像度の変更、色調補正やパスの切り抜き、画像の出力など基本的な処理を行えます。バナー制作やサイトに使用している写真はPhotoShopで加工しています。</p>
               </div>
-            </div>
-            <div class="skill-item">
+            </li>
+            <li class="skill-item">
               <div class="skill-body">
                 <h3 class="skill-name">Illustrator</h3>
                 <p class="skill-text">
                   パスを使用した図形の作成や簡単な文字組など基本的な内容を行えます。作品で使用しているロゴやアイコン等はIllustratorで作成しています。</p>
               </div>
-            </div>
-            <div class="skill-item">
+            </li>
+            <li class="skill-item">
               <div class="skill-body">
                 <h3 class="skill-name">Figma/XD</h3>
                 <p class="skill-text">
                   ワイヤーフレーム、デザインカンプの作成を行えます。プロトタイプは画面遷移など簡単な動作を実装できます。1作目はXDでワイヤーフレームを、2、3作目はFigmaでワイヤーフレームとデザインカンプを作成しています。
                 </p>
               </div>
-            </div>
-            <div class="skill-item">
+            </li>
+            <li class="skill-item">
               <div class="skill-body">
                 <h3 class="skill-name">Adobe Premiere Pro/After Effects</h3>
                 <p class="skill-text">
                   カット・簡単な画像、文字のエフェクト、音量調整ができます。</p>
               </div>
-            </div>
-            <div class="skill-item">
+            </li>
+            <li class="skill-item">
               <div class="skill-body">
                 <h3 class="skill-name">GIT/GitHub</h3>
                 <p class="skill-text">
                   マージ・コミットなど基本的な作業を行えます。</p>
               </div>
-            </div>
-            <div class="skill-item">
+            </li>
+            <li class="skill-item">
               <div class="skill-body">
                 <h3 class="skill-name">Excel/Googleスプレットシート</h3>
                 <p class="skill-text">
                   SUMやMAX、MINなどの簡単な関数を使用できます。</p>
               </div>
-            </div>
-            <div class="skill-item">
+            </li>
+            <li class="skill-item">
               <div class="skill-body">
                 <h3 class="skill-name">Word</h3>
                 <p class="skill-text">
                   簡単な文章作成ができます。</p>
               </div>
-            </div>
-            <div class="skill-item">
+            </li>
+            <li class="skill-item">
               <div class="skill-body">
                 <h3 class="skill-name">PowerPoint/Googleスライド</h3>
                 <p class="skill-text">
                   簡単な資料作成ができます。</p>
               </div>
-            </div>
-            <div class="skill-item">
+            </li>
+            <li class="skill-item">
               <div class="skill-body">
                 <h3 class="skill-name">資格</h3>
                 <p class="skill-text">
                   webクリエイター能力認定試験 / HTML5エキスパート</p>
                 <p class="next-skill">（今後の展望としましては年内にITパスポートの資格を取ります。）</p>
               </div>
-            </div>
-          </div>
-        </div>
+            </li>
+        </ul>
       </section>
       <!-- /skill -->
 
