add:姫野　レスポンシブ、works追加

--- a/public/pf/index.html
+++ b/public/pf/index.html
@@ -43,8 +43,13 @@
       <section class="works section" id="works">
         <h2 class="title">Works</h2>
         <ul class="inner works-list">
+			<li class="works-item"><a href="works-web-application.html">
+              <p class="works-img"><img src="img/emp_list_system.png" alt="WEBアプリケーション社員管理システムの表紙画像です。" /></p>
+              <p class="works-name">WEBアプリケーション社員管理システム/個人開発演習</p>
+              <p class="works-info">コーディング(Java(Spring)/SQL/HTML/CSS/JavaScript)</p>
+            </a></li>
 			<li class="works-item"><a href="works-console.html">
-              <p class="works-img"><img src="img/java_app.png" alt="コンソール社員管理システムの表紙画像です。" /></p>
+              <p class="works-img"><img src="img/java_app2.png" alt="コンソール社員管理システムの表紙画像です。" /></p>
               <p class="works-name">コンソール社員管理システム/チーム開発演習</p>
               <p class="works-info">コーディング(Java/SQL)</p>
             </a></li>
@@ -90,7 +95,7 @@
               <div class="skill-body">
                 <h3 class="skill-name">Java</h3>
                 <p class="skill-text">
-                  Javaの基礎構文（変数、入出力、演算子、配列、条件分岐、繰り返し）を理解し、応用構文（パッケージ、例外処理、コレクションフレーム）を活用して、基礎的なコードを記述できます。</p>
+                  Javaの基礎構文（変数、入出力、演算子、配列、条件分岐、繰り返し）を理解し、応用構文（パッケージ、例外処理、コレクションフレーム）を活用して、基礎的なコードを記述できます。<br>Spring Bootを用いたWebアプリケーション開発を学習しており、MVCモデルによる画面表示やフォーム処理、データベース連携の基本的な実装が可能です。</p>
               </div>
             </li>
             <li class="skill-item">
