add:姫野　gitURL追加

--- a/public/pf/works-console.html
+++ b/public/pf/works-console.html
@@ -57,7 +57,7 @@
             <p>OracleとJava、gitを使い研修の復習、確認をおこない、例外処理なども記述し動作を制御、プログラムを安全で使いやすくする。</p>
             <h3 class="article-info-title">コーディングについて</h3>
             <p>
-                 コメントを細かく記述することで第三者がみてもわかりやすいコーディングを心がけました。
+                 コメントを細かく記述することで第三者がみてもわかりやすいコーディングを心がけました。<br>GitURL：<a href="https://github.com/himeno-taiki56/console_app.git">https://github.com/himeno-taiki56/console_app.git</a>
             </p>
           </div>
           <div class="home-link">
