--- a/public/pf/works-web-application.html
+++ b/public/pf/works-web-application.html
@@ -57,7 +57,7 @@
 						<p>Webアプリケーションの基本的な流れと構成を理解すること。具体的には、画面表示・入力処理・DB操作・権限管理を一通り実装することで、実務に近い開発の流れを学ぶこと。</p>
 						<h3 class="article-info-title">ポイント</h3>
 						<p>
-							検索条件が分かりやすくなるよう、現在どの条件で検索しているかを画面に表示し、すぐに初期状態に戻せる検索条件リセットボタンを実装しました。また、入力エラー時にはエラーメッセージにアニメーションを付け、ユーザーの視線が自然にエラー箇所に向くよう工夫しました。このような独自機能を追加することで、ユーザビリティを高めることを意識して実装しました。
+							検索条件が分かりやすくなるよう、現在どの条件で検索しているかを画面に表示し、すぐに初期状態に戻せる検索条件リセットボタンを実装しました。また、入力エラー時にはエラーメッセージにアニメーションを付け、ユーザーの視線が自然にエラー箇所に向くよう工夫しました。このような独自機能を追加することで、ユーザビリティを高めることを意識して実装しました。<br>GitURL：<a href="https://github.com/himeno-taiki56/rt2-spring-app.git">https://github.com/himeno-taiki56/rt2-spring-app.git</a>
 						</p>
 					</div>
 					<div class="home-link">
