add:姫野　HTML微修正

--- a/public/pf/works-web-application.html
+++ b/public/pf/works-web-application.html
@@ -47,7 +47,7 @@
 						<img src="img/emp_list_system.png" alt="WEBアプリケーション社員管理システムのイメージです。">
 					</p>
 					<div class="article-body">
-						<p>Spring BootとThymeleafを使って、社員管理システムのWebアプリケーションを実装しました。使用ツールはeclipseです。　サイトのリンク：<a href="http://localhost:7779/spring_crud">localhost:7779/spring_crud</a></p>
+						<p>Spring BootとThymeleafを使って、社員管理システムのWebアプリケーションを実装しました。使用ツールはeclipseです。　サイトのリンク（ローカル）：<a href="http://localhost:7779/spring_crud">localhost:7779/spring_crud</a></p>
 						<h3 class="article-info-title">詳細</h3>
 						<p>ログイン機能と権限管理を備えており、一般ユーザーと管理者で表示項目や操作を制御しています。社員の一覧表示・社員名検索・部署名検索・登録・更新・削除に加え、一括削除機能も実装しました。一般ユーザは自分の情報のみ更新ができ、削除、一括削除機能については操作できないようになっています。
 						</p>
